--- a/src/main.css
+++ b/src/main.css
@@ -277,7 +277,7 @@ footer {
 footer p {
     font-weight: 500;
     line-height: 24px;
-    margin: 0;
+    /* margin: 0; */
     width: 100%;
 }
 
